# dotfiles

./: .chezmoiignore  .gitattributes  .gitconfig  .gitignore  .wslconfig  .zshrc  NOTES.md  README.md  TODO.md  config.yaml  dev-chezmoi-env.json  env-var-set.ps1
.config/: link.ps1  starship.toml
.github/: README.md
.zsh-tim/: alias.zsh  completion.zsh  env.zsh  init.zsh  options.zsh  path.zsh  theme.zsh  zstyle.zsh
Path of Exile/: dot.yaml  production_Config.ini
aria2/: dot.yaml
beets/: dot.yaml
data/: README.md  gpg-keys.txt.age  packages.json  packages.yaml  packages.yaml-schema.json  windows-packages.yaml
data/python-script-project/: README.md  pyproject.toml
data/python-script-project/lib/: arch_linux.py  chezmoi.py  flow.py  logging.py  proc.py  yaml.py
env/: windows.ps1
extra/: README.md
fancontrol/: 2023 Build.json  dot.yaml
foobar2000/: README.md  dot.yaml  theme.fth
gallery-dl/: config-win.json  dot.yaml
git/: config  dot.yaml  ignore
greenshot-unstable/: dot.yaml  greenshot.ini
home/: .chezmoi.toml.tmpl  .chezmoi.yaml.tmpl  .chezmoiextermal.toml.tmpl  .chezmoiexternal.toml.tmpl  .chezmoiignore  dot_zshrc
jpegview/: dot.yaml
mpv.net/: dot.yaml  mpv.conf  mpvnet.conf
non-home/: README.md  non-home.schema.json  non-home.yaml
nushell/: config.nu  dot.yaml  env.nu
pwsh/: Profile.ps1  dot.yaml
starship/: starship.toml
tests/: Dockerfile.archlinux  Dockerfile.debian  Dockerfile.ubuntu
vscode/: dot.yaml  keybindings.json  settings.json
windows_terminal/: ayu_theme.json
wsl/: .wslconfig  dot.yaml
yt-dlp/: config  (+1 more)
(+269 files in other folders)
